[tool.poetry]
name = "data-processing"
version = "0.1.0"
description = "FINCH ground processing architecture"
authors = ["sxu0 <sxu0726@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.1"
scipy = "^1.7.3"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.17.0"
pylint = "^2.12.2"
black = "^22.1.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
